# Metagenomes_Simulation

./: .gitignore  LICENCE.txt  README.md  pyproject.toml
.github/workflows/: python.yml
data/raw/: README.md
notebooks/: Visualize_raw_data.ipynb
src/metagenomes_simulation/: __init__.py  __version__.py  correlation_network.py
tests/: test_correlation_network.py
