[project]
name = 'metagenomes_simulation'
version = '0.0.2'
authors = [
  { name='Carlo Mattia Lovecchio', email='carlo.lovecchio@studio.unibo.it' },
]
description = 'Simulation and statistical analysis of metagenomic microbial data to investigate correlation biases'
readme = 'README.md'
requires-python = '>=3.8'
license = {text = 'MIT'}
keywords = [
  'statistics',
  'simulation',
  'metagenomics',
  'microbial-ecology',
  'network',
]
maintainers = [
  { name='Carlo Mattia Lovecchio', email='carlo.lovecchio@studio.unibo.it' },
]
classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Intended Audience :: Science/Research',
]
dependencies = [
  'numpy>=1.20.0',
  'scipy>=1.7.0',
  'pandas>=1.3.0',
  'matplotlib>=3.4.0',
]

[project.optional-dependencies]
dev = [
  'pytest>=7.0',
  'pytest-cov>=4.0',
  'flake8>=5.0',
  'black>=22.0',
  'sphinx>=5.0',
  'sphinx-rtd-theme>=1.0',
]
test = [
  'pytest>=7.0',
  'pytest-cov>=4.0',
  'hypothesis'
]
docs = [
  'sphinx>=5.0',
  'sphinx-rtd-theme>=1.0',
]

[project.urls]
'Homepage' = 'https://github.com/Sanniks/Metagenomes_Simulation'
'Bug Tracker' = 'https://github.com/Sanniks/Metagenomes_Simulation/issues'

[build-system]
requires = [
  'setuptools>=42',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["src"]
include = ["metagenomes_simulation*"]

[tool.coverage.run]
source = ["src/metagenomes_simulation"]
omit = ["tests/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
extend-exclude = ''' 
/(
  # directories 
  \.eggs 
  | \.git
  | \.mypy_cache
  | \.venv 
  )/
'''